--- a/homeworks/hw-2-equaliser-design/eq.ipynb
+++ b/homeworks/hw-2-equaliser-design/eq.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "f4680fb5-79a8-4786-9f2f-2856d37d6998",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,9 @@
   {
    "cell_type": "markdown",
    "id": "ff424a59-08aa-421c-b115-c92a35a135fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Low Shelf Filter\n",
     "---\n",
@@ -48,13 +50,20 @@
     "Here $G$ represents gain and $\\omega_c$ is the angular crossover frequency. \n",
     "<br>\n",
     "To obtain $\\omega_c$ in rad/s we can convert crossover frequency $f_c$ given in Hz using $\\omega_c = 2\\pi\\frac{f_c}{f_s}$ where $f_s$ is the sampling frequency, 44.1 kHz in our case.\n",
+    "Using the transfer function we can obtain filter coefficients. By dividing both numerator and denominator with $a_0=tan(\\omega_c/2)+\\sqrt{G}$ we get:\n",
+    "$$a_0 = 1$$\n",
+    "$$  a_1 = \\frac{tan(\\omega_c/2)-\\sqrt{G}}{tan(\\omega_c/2)+\\sqrt{G}} $$\n",
+    "$$  b_0 = \\frac{Gtan(\\omega_c/2)+\\sqrt{G}}{tan(\\omega_c/2)+\\sqrt{G}} $$\n",
+    "$$  b_1 = \\frac{Gtan(\\omega_c/2)-\\sqrt{G}}{tan(\\omega_c/2)+\\sqrt{G}} $$\n",
+    "\n",
+    "### Block Diagram\n",
     "\n",
     "### Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "a64649ab-3111-4e2b-8c45-bbc10404f677",
    "metadata": {
     "tags": []
@@ -63,17 +72,17 @@
    "source": [
     "def low_shelf(G, fc, fs=44100):\n",
     "    G = np.power(10, G / 20)\n",
-    "    b = np.zeros(2)\n",
-    "    a = np.zeros(2)\n",
+    "    b = np.ones(2)\n",
+    "    a = np.ones(2)\n",
     "    \n",
     "    omega = 2 * np.pi * fc / fs\n",
     "    tan_f = np.tan(omega / 2)\n",
     "    sqrt_G = np.sqrt(G)\n",
+    "    a0 = tan_f + sqrt_G\n",
     "    \n",
-    "    b[0] = G * tan_f + sqrt_G\n",
-    "    b[1] = G * tan_f - sqrt_G\n",
-    "    a[0] = tan_f + sqrt_G\n",
-    "    a[1] = tan_f - sqrt_G\n",
+    "    b[0] = (G * tan_f + sqrt_G) / a0\n",
+    "    b[1] = (G * tan_f - sqrt_G) / a0\n",
+    "    a[1] = (tan_f - sqrt_G) / a0\n",
     "    \n",
     "    return b, a"
    ]
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "ac2b4c53-b161-408e-9fe7-86d4e72013c7",
    "metadata": {},
    "outputs": [
@@ -139,33 +148,35 @@
     "## High Shelf Filter\n",
     "---\n",
     "\n",
-    "### Impementation\n",
-    "\n",
     "Now we need to implement a high-frequency first order shelving filter, the transfer function is given as follows:\n",
     "$$H_{HS}(z)=\\frac{\\sqrt{G}tan(\\omega_c/2)+G+\\Big[\\sqrt{G}tan(\\omega_c/2)-G\\Big]z^{-1}}{\\sqrt{G}tan(\\omega_c/2)+1+\\Big[\\sqrt{G}tan(\\omega_c/2)-1\\Big]z^{-1}}$$\n",
-    "We obtain this transfer function by taking the low-frequency shelving filter transfer function and replacing the gain $G$ with $1/G$ to get an inverse filter and then multiply the transfer function by $G$ to shift the magnitude response so that the gain at the zero frequency is 0 dB, and higher gain is achieved as desired. Hereafter, the numerator and the denominator are multiplied by $\\sqrt{G}$ to cancel divisions by $G$."
+    "We obtain this transfer function by taking the low-frequency shelving filter transfer function and replacing the gain $G$ with $1/G$ to get an inverse filter and then multiply the transfer function by $G$ to shift the magnitude response so that the gain at the zero frequency is 0 dB, and higher gain is achieved as desired. Hereafter, the numerator and the denominator are multiplied by $\\sqrt{G}$ to cancel divisions by $G$.\n",
+    "\n",
+    "### Block Diagram\n",
+    "\n",
+    "### Impementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "ba8856cd-acc1-4747-8c38-b27abd3840e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_shelf(G, fc, fs=44100):\n",
     "    G = np.power(10, G / 20)\n",
-    "    b = np.zeros(2)\n",
-    "    a = np.zeros(2)\n",
+    "    b = np.ones(2)\n",
+    "    a = np.ones(2)\n",
     "    \n",
     "    omega = 2 * np.pi * fc / fs\n",
     "    tan_f = np.tan(omega / 2)\n",
     "    sqrt_G = np.sqrt(G)\n",
+    "    a0 = sqrt_G * tan_f + 1\n",
     "    \n",
-    "    b[0] = sqrt_G * tan_f + G\n",
-    "    b[1] = sqrt_G * tan_f - G\n",
-    "    a[0] = sqrt_G * tan_f + 1\n",
-    "    a[1] = sqrt_G * tan_f - 1\n",
+    "    b[0] = (sqrt_G * tan_f + G) / a0\n",
+    "    b[1] = (sqrt_G * tan_f - G) / a0\n",
+    "    a[1] = (sqrt_G * tan_f - 1) / a0\n",
     "    \n",
     "    return b, a"
    ]
@@ -179,12 +190,12 @@
     "\n",
     "We can once again plot the magnitude response of our shelving filter using the previously explained method.\n",
     "<br>\n",
-    "We can now see that the high-frequency shelving filter magnitude response is equal to the low-frequency one flipped w.r.t. crossover frequency $f_c$."
+    "We can now see that the high-frequency shelving filter magnitude response is equal to the low-frequency one flipped horizontally w.r.t. crossover frequency $f_c$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "84afa401-55c0-47fc-9402-57cba128e570",
    "metadata": {},
    "outputs": [
@@ -232,17 +243,21 @@
    "source": [
     "##  EQ\n",
     "---\n",
+    "With these two filters designed, we are able to cascade them in order to create a two band equaliser.\n",
+    "\n",
+    "![](eq-block.png)\n",
+    "\n",
     "\n",
     "### Cascading the Filters - Magnitude Response\n",
     "\n",
-    "Here we can see what happens when we cascade (comb) the two created filters.\n",
+    "Here we can see what happens when we cascade (combine) the two created filters.\n",
     "<br>\n",
     "It is particularly interesting that when using the same GLP and GHP values in combination with same crossover frequency, the ultimate (EQ) magnitude response is flat."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "6ab346a0-2773-4fd8-bd83-da35876c773a",
    "metadata": {},
    "outputs": [
@@ -267,7 +282,7 @@
     "\n",
     "w, h_low = signal.freqz(b_low, a_low, fs=44100)\n",
     "w, h_high = signal.freqz(b_high, a_high, fs=44100)\n",
-    "h = h_low * h_high\n",
+    "h = h_low * h_high # cascaded frequency response - multiplication of individual responses\n",
     "\n",
     "\n",
     "plt.grid()\n",
@@ -294,47 +309,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "9405e190-6543-461a-bff7-347730aab2e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "class EQ:\n",
-    "    def __init__(self, glp, glh, cross_l, cross_h, fs=44100):\n",
+    "    def __init__(self, glp, ghp, cross_l, cross_h, fs=44100):\n",
     "\n",
     "        self.fs = fs\n",
     "        self.b_low, self.a_low = self._low_shelf(glp, cross_l)\n",
-    "        self.b_high, self.a_high = self._high_shelf(glh, cross_h)\n",
+    "        self.b_high, self.a_high = self._high_shelf(ghp, cross_h)\n",
     "    \n",
     "    def _low_shelf(self, G, fc):\n",
     "        G = np.power(10, G / 20)\n",
-    "        b = np.zeros(2)\n",
-    "        a = np.zeros(2)\n",
+    "        b = np.ones(2)\n",
+    "        a = np.ones(2)\n",
     "\n",
     "        omega = 2 * np.pi * fc / self.fs\n",
     "        tan_f = np.tan(omega / 2)\n",
     "        sqrt_G = np.sqrt(G)\n",
+    "        a0 = tan_f + sqrt_G\n",
     "\n",
-    "        b[0] = G * tan_f + sqrt_G\n",
-    "        b[1] = G * tan_f - sqrt_G\n",
-    "        a[0] = tan_f + sqrt_G\n",
-    "        a[1] = tan_f - sqrt_G\n",
+    "        b[0] = (G * tan_f + sqrt_G) / a0\n",
+    "        b[1] = (G * tan_f - sqrt_G) / a0\n",
+    "        a[1] = (tan_f - sqrt_G) / a0\n",
     "\n",
     "        return b, a\n",
     "    \n",
     "    def _high_shelf(self, G, fc):\n",
     "        G = np.power(10, G / 20)\n",
-    "        b = np.zeros(2)\n",
-    "        a = np.zeros(2)\n",
+    "        b = np.ones(2)\n",
+    "        a = np.ones(2)\n",
     "\n",
     "        omega = 2 * np.pi * fc / self.fs\n",
     "        tan_f = np.tan(omega / 2)\n",
     "        sqrt_G = np.sqrt(G)\n",
+    "        a0 = sqrt_G * tan_f + 1\n",
     "\n",
-    "        b[0] = sqrt_G * tan_f + G\n",
-    "        b[1] = sqrt_G * tan_f - G\n",
-    "        a[0] = sqrt_G * tan_f + 1\n",
-    "        a[1] = sqrt_G * tan_f - 1\n",
+    "        b[0] = (sqrt_G * tan_f + G) / a0\n",
+    "        b[1] = (sqrt_G * tan_f - G) / a0\n",
+    "        a[1] = (sqrt_G * tan_f - 1) / a0\n",
     "\n",
     "        return b, a\n",
     "    \n",
@@ -377,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "6b8b6cd2-6f2f-470a-95f8-b4c4932a856b",
    "metadata": {},
    "outputs": [
@@ -395,7 +410,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "a4e1f8bc-977f-4039-aab9-295f6ead51cf",
    "metadata": {},
    "outputs": [
@@ -451,7 +466,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "c2dd3b90-356b-4b62-8659-ac2335bf9c24",
    "metadata": {},
    "outputs": [
@@ -505,7 +520,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "e9041201-ea5a-48e8-90a3-cea1899620b1",
    "metadata": {},
    "outputs": [
@@ -565,7 +580,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
