--- a/homeworks/hw-2-equaliser-design/eq.ipynb
+++ b/homeworks/hw-2-equaliser-design/eq.ipynb
@@ -56,7 +56,6 @@
     "$$  b_0 = \\frac{Gtan(\\omega_c/2)+\\sqrt{G}}{tan(\\omega_c/2)+\\sqrt{G}} $$\n",
     "$$  b_1 = \\frac{Gtan(\\omega_c/2)-\\sqrt{G}}{tan(\\omega_c/2)+\\sqrt{G}} $$\n",
     "\n",
-    "### Block Diagram\n",
     "\n",
     "### Implementation"
    ]
@@ -151,8 +150,13 @@
     "Now we need to implement a high-frequency first order shelving filter, the transfer function is given as follows:\n",
     "$$H_{HS}(z)=\\frac{\\sqrt{G}tan(\\omega_c/2)+G+\\Big[\\sqrt{G}tan(\\omega_c/2)-G\\Big]z^{-1}}{\\sqrt{G}tan(\\omega_c/2)+1+\\Big[\\sqrt{G}tan(\\omega_c/2)-1\\Big]z^{-1}}$$\n",
     "We obtain this transfer function by taking the low-frequency shelving filter transfer function and replacing the gain $G$ with $1/G$ to get an inverse filter and then multiply the transfer function by $G$ to shift the magnitude response so that the gain at the zero frequency is 0 dB, and higher gain is achieved as desired. Hereafter, the numerator and the denominator are multiplied by $\\sqrt{G}$ to cancel divisions by $G$.\n",
+    "<br>\n",
+    "Using the same procedure as with low shelf filter we obtain the following coefficients:\n",
+    "$$a_0 = 1$$\n",
+    "$$a_1 = \\frac{\\sqrt{G}tan(\\omega_c/2)-1}{\\sqrt{G}tan(\\omega_c/2)+1}$$\n",
+    "$$b_0 = \\frac{\\sqrt{G}tan(\\omega_c/2)+G}{\\sqrt{G}tan(\\omega_c/2)+1}$$\n",
+    "$$b_1 = \\frac{\\sqrt{G}tan(\\omega_c/2)-G}{\\sqrt{G}tan(\\omega_c/2)+1}$$\n",
     "\n",
-    "### Block Diagram\n",
     "\n",
     "### Impementation"
    ]
