--- a/diaries/ld7-synthesis-of-audio-signals/dpw.ipynb
+++ b/diaries/ld7-synthesis-of-audio-signals/dpw.ipynb
@@ -5,7 +5,7 @@
    "id": "caafd2f1-8783-405c-9bcf-ed0131abaeb3",
    "metadata": {},
    "source": [
-    "## Implementation of DWP Sawtooth Algorithm"
+    "## Implementation of DPW Sawtooth Algorithm"
    ]
   },
   {
